# RustOS

./: .gitattributes  README.md  main  main.rs
rust_os/: Cargo.toml
rust_os/src/: main.rs
